# somrepresenta-oficinavirtual

./: .env-example  .gitignore  .prettierignore  .prettierrc.yaml  CHANGES.md  Makefile  README.md  TODO.md  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  vite.config.js
.github/workflows/: main.yml
backend/: api.py  api_base.py  api_base_test.py  api_business.py  api_business_test.py  api_test.py  auth.py  authlocal.py  authlocal_test.py  authremote.py  erp.py  erp_test.py  models.py  models_test.py
backend/auth/: authlocal.py  authlocal_test.py  authremote.py  common.py
backend/auth/authentik/: user_provision.py  user_provision_test.py
backend/datasources/: __init__.py  dummy.py  erp.py  exceptions.py
backend/utils/: gravatar.py  responses.py  testutils.py  vat.py
frontend/: .env  .env.local-example  .eslintrc.cjs  .prettierrc.yaml  index.html  package-lock.json
frontend/src/: App.css  App.jsx  App.test.jsx  HomePage.jsx  NotFoundPage.jsx  NotYetImplementedPage.jsx  index.css  loading.css  main.jsx
frontend/src/DetailInstallationPage/: index.jsx
frontend/src/HomePage/: PageButton.jsx  index.jsx
frontend/src/InstallationsPage/: index.jsx
frontend/src/ProfilePage/: index.jsx
frontend/src/assets/: Icons.jsx
frontend/src/components/: AppFrame.jsx  AuthProvider.jsx  AuthProviderDummy.jsx  AuthProviderOauth2.jsx  AuthProviderOauth2Local.jsx  AuthProviderOidc.jsx  BasicTable.jsx  BreakPointIndicator.jsx  ChangePasswordDialog.jsx  ChartProductionData.jsx  ClippedDrawer.jsx  ColorModeButton.jsx  ContractSelector.jsx  CookiesBanner.jsx  CookiesReport.jsx  DialogProvider.jsx  ErrorSplash.jsx  Footer.jsx  GlobalTheme.jsx  HijackDialog.jsx  HijackWarning.jsx  InstallationProvider.jsx  LanguageMenu.jsx  Loading.jsx  LoginDialog.jsx  NavigationButtons.jsx  PageGuard.jsx  PageTitle.jsx  PagesMenu.jsx  ProfileButton.jsx  RgpdCheck.jsx  SimpleTable.jsx  SnackbarMessages.example.jsx  SnackbarMessages.jsx  SomEnergiaTheme.js  TableEditor.jsx  (+5 more)
scripts/: representa_api.py  representa_manage.py
(+51 files in other folders)
